--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,9 @@ $UPPERCASE_TEXT: uppercase;
 $LOWERCASE_TEXT: lowercase;
 $NONE_TEXT: none;
 
+$SANS_SERIF: 'Roboto', sans-serif;
+$MONOSPACE: 'Roboto Mono', monospace;
+
 // ---------- colors ---------- //
 $WHITE: #ffffff;
 $BLACK: #000000;
