--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,6 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto:300,400,700&display=swap");
+@import url("https://use.fontawesome.com/releases/v5.6.3/css/all.css");
 body, html {
-  font-family: Helvetica;
-  font-weight: bold;
   margin: 0; }
 
 a {
@@ -24,12 +24,9 @@ a {
     -webkit-transform: translateX(-50%) translateY(-50%);
     -ms-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
     height: 600px;
-    overflow: hidden; }
+    overflow: hidden;
+    display: none; }
     .soundboard-wrapper .soundboard__logo {
       width: 1000px;
       height: 100%;
@@ -72,5 +69,91 @@ a {
         background-image: url("../img/todd-padre.png"); }
       .soundboard-wrapper .soundboard .soundboard-teachers__sam-weatherman {
         background-image: url("../img/sam-weatherman.png"); }
+
+.audio-clip-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 75px;
+  padding: 0 25px;
+  border-bottom: 1px solid #eeeeee; }
+  .audio-clip-bar__play-icon {
+    flex: 0; }
+  .audio-clip-bar__clip-title {
+    flex: 1;
+    padding-left: 50px; }
+  .audio-clip-bar__clip-tags {
+    flex: 1;
+    text-align: right; }
+    .audio-clip-bar__clip-tags p {
+      font-size: 12px;
+      display: inline;
+      margin-left: 10px;
+      background-color: #eeeeee;
+      padding: 5px 10px;
+      border-radius: 10px;
+      color: #a4a4a4; }
+
+@media screen and (min-width: 50em) {
+  :root {
+    font-size: 2vw; } }
+@media screen and (min-width: 75em) {
+  :root {
+    font-size: 1.4em; } }
+h1,
+h2,
+h3,
+h4,
+li,
+p {
+  font-family: "Roboto", sans-serif; }
+
+h5,
+h6 {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 700; }
+
+h1 {
+  font-size: 6.667em; }
+
+.header-one h1 {
+  font-size: 6.667em; }
+
+h2 {
+  font-size: 2.533em; }
+
+.header-two h2 {
+  font-size: 2.533em; }
+
+h3 {
+  font-size: 1.667em; }
+
+.header-three h3 {
+  font-size: 1.667em; }
+
+h4 {
+  font-size: 1.2em; }
+
+.header-four h4 {
+  font-size: 1.2em; }
+
+h5 {
+  font-size: 0.933em; }
+
+.header-five h5 {
+  font-size: 0.933em; }
+
+h6 {
+  font-size: 0.733em; }
+
+.header-six h6 {
+  font-size: 0.733em; }
+
+p {
+  font-size: 0.867em; }
+
+.paragraph p {
+  font-size: 0.867em; }
 
 /*# sourceMappingURL=style.css.map */
