--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -4,17 +4,23 @@
   padding: 0 25px;
   border-bottom: 1px solid #eeeeee;
 
+  audio {
+    filter: sepia(100%) saturate(0) contrast(100%) invert(0%) brightness(1);
+    -webkit-filter: sepia(100%) saturate(0) contrast(100%) invert(0%) brightness(1);
+  }
+
   &__play-icon {
-    flex: 0;
+    flex: 0 35px;
   }
   &__clip-title {
     flex: 1;
     padding-left: 50px;
   }
   &__clip-tags {
-    flex: 1;
+    flex: 2;
     text-align: right;
     p {
+      cursor: pointer;
       font-size: 12px;
       display: inline;
       margin-left: 10px;
@@ -22,6 +28,44 @@
       padding: 5px 10px;
       border-radius: 10px;
       color: #a4a4a4;
+      white-space: nowrap;
+
+      &:hover {
+        color: #000000;
+      }
     }
+  }
+}
+
+.search {
+  text-align: center;
+  border-bottom: 2px solid #eeeeee;
+  width: 300px;
+  height: 50px;
+  @include flexbox(row, space-between, center);
+  margin: 0 auto;
+
+  i {
+    color: #a4a4a4;
+  }
+
+  .clear-search {
+    i {
+      color: #a4a4a4;
+      cursor: pointer;
+    }
+  }
+
+  .search-input {
+    padding: 0 10px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    background-image: none;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    font-size: 14px;
   }
 }
