--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -8,18 +8,18 @@ $h4_font_size: 1.2em;
 $h5_font_size: 0.933em;
 $h6_font_size: 0.733em;
 $p_large_font_size: 1.2em;
-$p_small_font_size: 0.867em;
+$p_small_font_size: 0.767em;
 
 @media screen and (min-width: 50em) {
-	:root {
-		font-size: 2vw;
-	}
+  :root {
+    font-size: 2vw;
+  }
 }
 
 @media screen and (min-width: 75em) {
-	:root {
-		font-size: 1.4em;
-	}
+  :root {
+    font-size: 1.4em;
+  }
 }
 
 h1,
@@ -28,88 +28,89 @@ h3,
 h4,
 li,
 p {
-	font-family: $SANS_SERIF;
+  font-family: $SANS_SERIF;
 }
 
 h5,
 h6 {
-	font-family: $MONOSPACE;
-	font-weight: $BOLD_WEIGHT;
+  font-family: $MONOSPACE;
+  font-weight: $BOLD_WEIGHT;
+  margin: .5em 0;
 }
 
 // ---------- h1 ---------- //
 h1 {
-	font-size: $h1_font_size;
+  font-size: $h1_font_size;
 }
 
 .header-one {
-	h1 {
-		font-size: $h1_font_size;
-	}
+  h1 {
+    font-size: $h1_font_size;
+  }
 }
 
 // ---------- h2 ---------- //
 h2 {
-	font-size: $h2_font_size;
+  font-size: $h2_font_size;
 }
 
 .header-two {
-	h2 {
-		font-size: $h2_font_size;
-	}
+  h2 {
+    font-size: $h2_font_size;
+  }
 }
 
 // ---------- h3 ---------- //
 h3 {
-	font-size: $h3_font_size;
+  font-size: $h3_font_size;
 }
 
 .header-three {
-	h3 {
-		font-size: $h3_font_size;
-	}
+  h3 {
+    font-size: $h3_font_size;
+  }
 }
 
 // ---------- h4 ---------- //
 h4 {
-	font-size: $h4_font_size;
+  font-size: $h4_font_size;
 }
 
 .header-four {
-	h4 {
-		font-size: $h4_font_size;
-	}
+  h4 {
+    font-size: $h4_font_size;
+  }
 }
 
 // ---------- h5 ---------- //
 h5 {
-	font-size: $h5_font_size;
+  font-size: $h5_font_size;
 }
 
 .header-five {
-	h5 {
-		font-size: $h5_font_size;
-	}
+  h5 {
+    font-size: $h5_font_size;
+  }
 }
 
 // ---------- h6 ---------- //
 h6 {
-	font-size: $h6_font_size;
+  font-size: $h6_font_size;
 }
 
 .header-six {
-	h6 {
-		font-size: $h6_font_size;
-	}
+  h6 {
+    font-size: $h6_font_size;
+  }
 }
 
 // ---------- p ---------- //
 p {
-	font-size: $p_small_font_size;
+  font-size: $p_small_font_size;
 }
 
 .paragraph {
-	p {
-		font-size: $p_small_font_size;
-	}
+  p {
+    font-size: $p_small_font_size;
+  }
 }
