--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -32,7 +32,7 @@
     border-radius: 100%;
     background-color: white;
     box-shadow: 0 16px 24px 2px rgba(0,0,0,0.03), 0 6px 30px 5px rgba(0,0,0,0.02), 0 8px 10px 0 rgba(0,0,0,0.04);
-    position: fixed;
+    position: absolute;
     right: 15px;
     top: 15px;
     cursor: pointer;
@@ -64,9 +64,9 @@
     background-color: white;
     box-shadow: 0 16px 24px 2px rgba(0,0,0,0.03), 0 6px 30px 5px rgba(0,0,0,0.02), 0 8px 10px 0 rgba(0,0,0,0.04);
     width: 100vw;
+    text-align: center;
     h6 {
-      margin: 0 auto;
-      text-align: center;
+      display: inline;
       line-height: 50px;
       font-weight: 400 !important;
       font-size: 14px;
