--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -1,7 +1,7 @@
 .audio-clip-bar {
   @include flexbox(row, space-between, center);
-  min-height: 75px;
-  padding: 0 25px;
+  min-height: 90px;
+  padding: 20px 25px 0;
   border-bottom: 1px solid #eeeeee;
 
   @media (max-width: $LESS_THAN_MD) {
@@ -12,7 +12,7 @@
     flex: 0;
 
     svg {
-      width: 35px;
+      width: 40px;
     }
 
     @media (max-width: $LESS_THAN_MD) {
@@ -22,14 +22,21 @@
   }
   &__clip-title {
     flex: 1;
-    padding-left: 50px;
+    padding: 0 75px 0 50px;
+
+    &-season-episode {
+      font-weight: $NORMAL_WEIGHT;
+      margin: 0 0 .5em 0;
+    }
 
     @media (max-width: $LESS_THAN_MD) {
       display: table-cell;
       vertical-align: middle;
       padding-left: 25px;
+      padding-right: 0;
     }
   }
+
   &__clip-tags {
     flex: 2;
     text-align: right;
@@ -50,7 +57,9 @@
       padding: 5px 10px;
       border-radius: 10px;
       color: #a4a4a4;
-      white-space: nowrap;
+      white-space: pre-wrap;
+      white-space: -moz-pre-wrap;
+      line-height: 30px;
 
       @media (max-width: $LESS_THAN_MD) {
         margin: 0 10px 0 0;
@@ -63,42 +72,51 @@
   }
 }
 
-.search {
-  text-align: center;
-  border-bottom: 2px solid #eeeeee;
-  width: 300px;
-  height: 50px;
-  @include flexbox(row, space-between, center);
-  margin: 0 auto 25px auto;
-
-  @media (max-width: $LESS_THAN_MD) {
+.search-clip-wrapper {
+  &__search {
     text-align: center;
-    margin: 25px auto;
-    width: 275px;
+    width: 400px;
+    height: 50px;
+    @include flexbox(row, space-between, center);
+    margin: 0 auto 25px auto;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
+    background-color: white;
+    border-radius: 5px;
+    z-index: 997;
+    min-width: 250px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 15px;
 
-  }
+    @media (max-width: $LESS_THAN_MD) {
+      text-align: center;
+      margin: 25px auto;
+      width: 75vw;
+    }
 
-  i {
-    color: #a4a4a4;
-  }
-
-  .clear-search {
     i {
       color: #a4a4a4;
-      cursor: pointer;
+      padding: 0 10px;
     }
-  }
 
-  .search-input {
-    padding: 0 10px;
-    height: 100%;
-    width: 100%;
-    border: none;
-    background-image: none;
-    background-color: transparent;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    font-size: 14px;
+    .clear-search {
+      i {
+        color: #a4a4a4;
+        cursor: pointer;
+      }
+    }
+
+    .search-input {
+      padding: 0 10px;
+      height: 100%;
+      width: 100%;
+      border: none;
+      background-image: none;
+      background-color: transparent;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      font-size: 14px;
+    }
   }
 }
