--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -1,11 +1,11 @@
 .app {
   max-width: 1440px;
-  margin: 0 auto 100px auto;
+  margin: 0 auto 150px auto;
 
   .info-modal {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0,0,0,.25);
+    background-color: rgba(0, 0, 0, .25);
     z-index: 998;
     position: fixed;
     left: 0;
@@ -16,12 +16,21 @@
       padding: 50px;
       background-color: white;
       border-radius: 20px;
-      box-shadow: 0 16px 24px 2px rgba(0,0,0,0.03), 0 6px 30px 5px rgba(0,0,0,0.02), 0 8px 10px 0 rgba(0,0,0,0.04);
+      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
       @include absolute-center(both);
 
       @media (max-width: $LESS_THAN_SM) {
         width: 75%;
         padding: 25px;
+      }
+      h6 {
+        display: inline;
+        line-height: 50px;
+        font-weight: 400 !important;
+        font-size: 14px;
+      }
+      a {
+        color: black;
       }
     }
   }
@@ -31,7 +40,7 @@
     position: relative;
     border-radius: 100%;
     background-color: white;
-    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.03), 0 6px 30px 5px rgba(0,0,0,0.02), 0 8px 10px 0 rgba(0,0,0,0.04);
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
     position: absolute;
     right: 15px;
     top: 15px;
@@ -58,21 +67,106 @@
 
   .footer {
     position: fixed;
-    bottom: 0;
-    left: 0;
-    height: 50px;
+    bottom: 15px;
+    left: 15px;
+    min-height: 60px;
     background-color: white;
-    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.03), 0 6px 30px 5px rgba(0,0,0,0.02), 0 8px 10px 0 rgba(0,0,0,0.04);
-    width: 100vw;
-    text-align: center;
-    h6 {
-      display: inline;
-      line-height: 50px;
-      font-weight: 400 !important;
-      font-size: 14px;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
+    border-radius: 10px;
+    width: calc(100vw - 30px);
+    padding: 10px 0;
+    @include flexbox(column, center, center);
+    font-family: $SANS_SERIF;
+    //font-size: $p_small_font_size;
+
+    .media-controls {
+      @include flexbox(row, center, center);
+      padding: 0 15px;
     }
-    a {
-      color: black;
+    button {
+      border: none;
+      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
+      padding: 10px;
+      border-radius: 5px;
+      min-width: 60px;
+      margin-right: 25px;
+      font-weight: $BOLD_WEIGHT;
+    }
+
+    time {
+      font-size: $p_small_font_size;
+    }
+
+    input[type=range] {
+      -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+      width: 100%; /* Specific width is required for Firefox. */
+      background: transparent; /* Otherwise white in Chrome */
+      background-color: black;
+      height: 5px;
+      margin: 0 10px;
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+
+    }
+
+    input[type=range]:focus {
+      outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+    }
+
+    input[type=range]::-ms-track {
+      width: 100%;
+      cursor: pointer;
+
+      /* Hides the slider so custom styles can be added */
+      background: transparent;
+      border-color: transparent;
+      color: transparent;
+      background-color: black;
+      height: 5px;
+    }
+
+    /* Special styling for WebKit/Blink */
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      border: 1px solid #000000;
+      height: 15px;
+      width: 15px;
+      border-radius: 100%;
+      background: #ffffff;
+      cursor: pointer;
+      margin-top: 0; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
+    }
+
+    /* All the same stuff for Firefox */
+    input[type=range]::-moz-range-thumb {
+      border: 1px solid #000000;
+      height: 15px;
+      width: 15px;
+      border-radius: 100%;
+      background: #ffffff;
+      cursor: pointer;
+      margin-top: 0; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
+    }
+
+    /* All the same stuff for IE */
+    input[type=range]::-ms-thumb {
+      border: 1px solid #000000;
+      height: 15px;
+      width: 15px;
+      border-radius: 100%;
+      background: #ffffff;
+      cursor: pointer;
+      margin-top: 0; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+      box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.03), 0 6px 30px 5px rgba(0, 0, 0, 0.02), 0 8px 10px 0 rgba(0, 0, 0, 0.04);
+    }
+
+    h6 {
+      padding-bottom: 5px;
+      font-size: 0.65em;
     }
   }
 }
